src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__function_type_complex.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 5,
                                        end: 13,
                                        start_line: 1,
                                        start_col: 6,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 5,
                                end: 13,
                                start_line: 1,
                                start_col: 6,
                            },
                        },
                        ty: Type {
                            kind: Function {
                                params: [
                                    Type {
                                        kind: Reference {
                                            lifetime: None,
                                            mutable: false,
                                            inner: Type {
                                                kind: Path(
                                                    TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 19,
                                                                        end: 22,
                                                                        start_line: 1,
                                                                        start_col: 20,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 19,
                                                            end: 22,
                                                            start_line: 1,
                                                            start_col: 20,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 19,
                                                    end: 22,
                                                    start_line: 1,
                                                    start_col: 20,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 18,
                                            end: 22,
                                            start_line: 1,
                                            start_col: 19,
                                        },
                                    },
                                    Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 4,
                                                            },
                                                            span: Span {
                                                                start: 24,
                                                                end: 27,
                                                                start_line: 1,
                                                                start_col: 25,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 24,
                                                    end: 27,
                                                    start_line: 1,
                                                    start_col: 25,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 24,
                                            end: 27,
                                            start_line: 1,
                                            start_col: 25,
                                        },
                                    },
                                ],
                                return_type: Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 5,
                                                        },
                                                        span: Span {
                                                            start: 32,
                                                            end: 38,
                                                            start_line: 1,
                                                            start_col: 33,
                                                        },
                                                    },
                                                    args: Some(
                                                        TypeArgs {
                                                            args: [
                                                                Type(
                                                                    Type {
                                                                        kind: Path(
                                                                            TypePath {
                                                                                segments: [
                                                                                    TypePathSegment {
                                                                                        name: Spanned {
                                                                                            node: SymbolU32 {
                                                                                                value: 6,
                                                                                            },
                                                                                            span: Span {
                                                                                                start: 39,
                                                                                                end: 43,
                                                                                                start_line: 1,
                                                                                                start_col: 40,
                                                                                            },
                                                                                        },
                                                                                        args: None,
                                                                                    },
                                                                                ],
                                                                                span: Span {
                                                                                    start: 39,
                                                                                    end: 43,
                                                                                    start_line: 1,
                                                                                    start_col: 40,
                                                                                },
                                                                            },
                                                                        ),
                                                                        span: Span {
                                                                            start: 39,
                                                                            end: 43,
                                                                            start_line: 1,
                                                                            start_col: 40,
                                                                        },
                                                                    },
                                                                ),
                                                            ],
                                                            span: Span {
                                                                start: 38,
                                                                end: 44,
                                                                start_line: 1,
                                                                start_col: 39,
                                                            },
                                                        },
                                                    ),
                                                },
                                            ],
                                            span: Span {
                                                start: 32,
                                                end: 44,
                                                start_line: 1,
                                                start_col: 33,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 32,
                                        end: 44,
                                        start_line: 1,
                                        start_col: 33,
                                    },
                                },
                                effects: None,
                            },
                            span: Span {
                                start: 15,
                                end: 44,
                                start_line: 1,
                                start_col: 16,
                            },
                        },
                        span: Span {
                            start: 5,
                            end: 44,
                            start_line: 1,
                            start_col: 6,
                        },
                    },
                ],
                return_type: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 6,
                                            },
                                            span: Span {
                                                start: 49,
                                                end: 53,
                                                start_line: 1,
                                                start_col: 50,
                                            },
                                        },
                                        args: None,
                                    },
                                ],
                                span: Span {
                                    start: 49,
                                    end: 53,
                                    start_line: 1,
                                    start_col: 50,
                                },
                            },
                        ),
                        span: Span {
                            start: 49,
                            end: 53,
                            start_line: 1,
                            start_col: 50,
                        },
                    },
                ),
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Literal(
                                    Literal {
                                        kind: Bool(
                                            true,
                                        ),
                                        span: Span {
                                            start: 56,
                                            end: 60,
                                            start_line: 1,
                                            start_col: 57,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 56,
                                    end: 60,
                                    start_line: 1,
                                    start_col: 57,
                                },
                            },
                        ),
                        span: Span {
                            start: 54,
                            end: 62,
                            start_line: 1,
                            start_col: 55,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 62,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 62,
        start_line: 1,
        start_col: 1,
    },
}
