src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__function_with_effects.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 8,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 9,
                                        end: 13,
                                        start_line: 1,
                                        start_col: 10,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 9,
                                end: 13,
                                start_line: 1,
                                start_col: 10,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 15,
                                                    end: 21,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 15,
                                        end: 21,
                                        start_line: 1,
                                        start_col: 16,
                                    },
                                },
                            ),
                            span: Span {
                                start: 15,
                                end: 21,
                                start_line: 1,
                                start_col: 16,
                            },
                        },
                        span: Span {
                            start: 9,
                            end: 21,
                            start_line: 1,
                            start_col: 10,
                        },
                    },
                ],
                return_type: None,
                effects: Some(
                    EffectRow {
                        kind: Effects {
                            effects: [
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 4,
                                                        },
                                                        span: Span {
                                                            start: 26,
                                                            end: 28,
                                                            start_line: 1,
                                                            start_col: 27,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 26,
                                                end: 28,
                                                start_line: 1,
                                                start_col: 27,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 26,
                                        end: 28,
                                        start_line: 1,
                                        start_col: 27,
                                    },
                                },
                            ],
                            rest: None,
                        },
                        span: Span {
                            start: 25,
                            end: 29,
                            start_line: 1,
                            start_col: 26,
                        },
                    },
                ),
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Call {
                                    callee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 5,
                                                            },
                                                            span: Span {
                                                                start: 32,
                                                                end: 39,
                                                                start_line: 1,
                                                                start_col: 33,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 32,
                                                    end: 39,
                                                    start_line: 1,
                                                    start_col: 33,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 32,
                                            end: 39,
                                            start_line: 1,
                                            start_col: 33,
                                        },
                                    },
                                    args: [
                                        CallArg {
                                            name: None,
                                            value: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 2,
                                                                    },
                                                                    span: Span {
                                                                        start: 40,
                                                                        end: 44,
                                                                        start_line: 1,
                                                                        start_col: 41,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 40,
                                                            end: 44,
                                                            start_line: 1,
                                                            start_col: 41,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 40,
                                                    end: 44,
                                                    start_line: 1,
                                                    start_col: 41,
                                                },
                                            },
                                            span: Span {
                                                start: 40,
                                                end: 44,
                                                start_line: 1,
                                                start_col: 41,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 32,
                                    end: 45,
                                    start_line: 1,
                                    start_col: 33,
                                },
                            },
                        ),
                        span: Span {
                            start: 30,
                            end: 47,
                            start_line: 1,
                            start_col: 31,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 47,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 47,
        start_line: 1,
        start_col: 1,
    },
}
